msdscript functions tests passing